// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Buttons/ButtonComponent Alert 1`] = `
<div
  className="text-center font-mono hover:peach-p font-extrabold leading-loose text-peach-h text-lg rounded-full border border-peach-l shadow-lg drop-shadow-lg hover:bg-peach bg-peach-d"
  data-testid="atomic-div"
  disabled={false}
  onKeyDown={[Function]}
  tabIndex={0}
  whileHover={
    {
      "scale": 1.01,
    }
  }
  whileTap={
    {
      "scale": 0.99,
    }
  }
>
  alert
</div>
`;

exports[`Storyshots Buttons/ButtonComponent Calm 1`] = `
<div
  className="text-center font-mono hover:aqua-p font-extrabold leading-loose text-aqua-h text-lg rounded-full border border-aqua-l shadow-lg drop-shadow-lg hover:bg-aqua bg-aqua-d"
  data-testid="atomic-div"
  disabled={false}
  onKeyDown={[Function]}
  tabIndex={0}
  whileHover={
    {
      "scale": 1.01,
    }
  }
  whileTap={
    {
      "scale": 0.99,
    }
  }
>
  calm
</div>
`;

exports[`Storyshots Buttons/ButtonComponent Overt 1`] = `
<div
  className="text-center font-mono hover:cherry-p font-extrabold leading-loose text-cherry-h text-lg rounded-full border border-cherry-l shadow-lg drop-shadow-lg hover:bg-cherry bg-cherry-d"
  data-testid="atomic-div"
  disabled={false}
  onKeyDown={[Function]}
  tabIndex={0}
  whileHover={
    {
      "scale": 1.01,
    }
  }
  whileTap={
    {
      "scale": 0.99,
    }
  }
>
  overt
</div>
`;

exports[`Storyshots Buttons/ButtonComponent Subtle 1`] = `
<div
  className="text-center font-mono hover:grape-p font-extrabold leading-loose text-grape-h text-lg rounded-full border border-grape shadow-inner shadow-grape-d hover:bg-grape-a bg-util"
  data-testid="atomic-div"
  disabled={false}
  onKeyDown={[Function]}
  tabIndex={0}
  whileHover={
    {
      "scale": 1.01,
    }
  }
  whileTap={
    {
      "scale": 0.99,
    }
  }
>
  subtle
</div>
`;
